==> bcmi-labs/arduino-core-stm32f4/cores/arduino/Wire.cpp <==
  #include <stdlib.h>
  #include <string.h>
  #include <inttypes.h>
  #include "stm32f4xx_hal.h"
#include "Wire.h"
#define FLAG_TIMEOUT ((int)0x1000)
#define LONG_TIMEOUT ((int)0x8000)

void TwoWire::begin(void)
{
  GPIO_InitTypeDef  GPIO_InitStruct;
  I2C_TypeDef *twi = (I2C_TypeDef *)I2cHandle.Instance;

  rxBufferIndex = 0;
  rxBufferLength = 0;

  txBufferIndex = 0;
  txBufferLength = 0;

  //twi_init();
  if(twi == HAL_I2C3)
  {
    /* Enable GPIO TX/RX clock */
    __HAL_RCC_GPIOH_CLK_ENABLE();

    /* Enable I2Cx clock */
    __HAL_RCC_I2C3_CLK_ENABLE();

    /* I2C SCL GPIO pin configuration  */
    GPIO_InitStruct.Pin       = GPIO_PIN_7;
    GPIO_InitStruct.Mode      = GPIO_MODE_AF_OD;
    GPIO_InitStruct.Pull      = GPIO_PULLUP;
    GPIO_InitStruct.Speed     = GPIO_SPEED_HIGH;
    GPIO_InitStruct.Alternate = GPIO_AF4_I2C3;
    HAL_GPIO_Init(HAL_GPIOH, &GPIO_InitStruct);

    /* I2C SDA GPIO pin configuration  */
    GPIO_InitStruct.Pin       = GPIO_PIN_8;
    GPIO_InitStruct.Alternate = GPIO_AF4_I2C3;
    HAL_GPIO_Init(HAL_GPIOH, &GPIO_InitStruct);

    HAL_NVIC_SetPriority(I2C3_ER_IRQn, 0, 1);
    HAL_NVIC_EnableIRQ(I2C3_ER_IRQn);
    HAL_NVIC_SetPriority(I2C3_EV_IRQn, 0, 2);
    HAL_NVIC_EnableIRQ(I2C3_EV_IRQn);
  }
  else if(twi == HAL_I2C2)
  {
    /* Enable GPIO TX/RX clock */
    __HAL_RCC_GPIOB_CLK_ENABLE();

  /* Enable I2Cx clock */
    __HAL_RCC_I2C1_CLK_ENABLE();

    /* I2C SCL GPIO pin configuration  */
    GPIO_InitStruct.Pin       = GPIO_PIN_6;
    GPIO_InitStruct.Mode      = GPIO_MODE_AF_OD;
    GPIO_InitStruct.Pull      = GPIO_PULLUP;
    GPIO_InitStruct.Speed     = GPIO_SPEED_HIGH;
    GPIO_InitStruct.Alternate = GPIO_AF4_I2C1;
    HAL_GPIO_Init(HAL_GPIOB, &GPIO_InitStruct);

    /* I2C SDA GPIO pin configuration  */
    GPIO_InitStruct.Pin       = GPIO_PIN_7;
    GPIO_InitStruct.Alternate = GPIO_AF4_I2C1;
    HAL_GPIO_Init(HAL_GPIOB, &GPIO_InitStruct);

    HAL_NVIC_SetPriority(I2C2_ER_IRQn, 0, 1);
    HAL_NVIC_EnableIRQ(I2C2_ER_IRQn);
    HAL_NVIC_SetPriority(I2C2_EV_IRQn, 0, 2);
    HAL_NVIC_EnableIRQ(I2C2_EV_IRQn);
  }
  else if(twi == HAL_I2C1)
  {
    /* Enable GPIO TX/RX clock */
    __HAL_RCC_GPIOB_CLK_ENABLE();

  /* Enable I2Cx clock */
    __HAL_RCC_I2C1_CLK_ENABLE();

    /* I2C SCL GPIO pin configuration  */
    GPIO_InitStruct.Pin       = GPIO_PIN_6;
    GPIO_InitStruct.Mode      = GPIO_MODE_AF_OD;
    GPIO_InitStruct.Pull      = GPIO_PULLUP;
    GPIO_InitStruct.Speed     = GPIO_SPEED_HIGH;
    GPIO_InitStruct.Alternate = GPIO_AF4_I2C1;
    HAL_GPIO_Init(HAL_GPIOB, &GPIO_InitStruct);

    /* I2C SDA GPIO pin configuration  */
    GPIO_InitStruct.Pin       = GPIO_PIN_7;
    GPIO_InitStruct.Alternate = GPIO_AF4_I2C1;
    HAL_GPIO_Init(HAL_GPIOB, &GPIO_InitStruct);

    HAL_NVIC_SetPriority(I2C1_ER_IRQn, 0, 1);
    HAL_NVIC_EnableIRQ(I2C1_ER_IRQn);
    HAL_NVIC_SetPriority(I2C1_EV_IRQn, 0, 2);
    HAL_NVIC_EnableIRQ(I2C1_EV_IRQn);
  } else
  {
    // Do nothing
  }

  /*##-1- Configure the I2C peripheral ######################################*/
  I2cHandle.Init.ClockSpeed      = 100000;
  I2cHandle.Init.DutyCycle       = I2C_DUTYCYCLE_2;
  I2cHandle.Init.OwnAddress1     = defaultAddress;
  I2cHandle.Init.AddressingMode  = I2C_ADDRESSINGMODE_7BIT;
  I2cHandle.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
  I2cHandle.Init.OwnAddress2     = 0x0;
  I2cHandle.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
  I2cHandle.Init.NoStretchMode   = I2C_NOSTRETCH_DISABLE;

  HAL_I2C_Init(&I2cHandle);

  /*##-3- Put I2C peripheral in listen mode process ###########################*/
  HAL_I2C_EnableListen_IT(&I2cHandle);
}

void TwoWire::begin(uint8_t address)
{
  defaultAddress = (address << 1);
  begin();
}

void TwoWire::begin(int address)
{
  begin((uint8_t)address);
}

uint8_t TwoWire::requestFrom(uint8_t address, uint8_t quantity, uint8_t sendStop)
{
  uint8_t ret_val;

  disableInterrupt();

  // clamp to buffer length
  if(quantity > BUFFER_LENGTH){
    quantity = BUFFER_LENGTH;
  }
  // perform blocking read into buffer
  int read = i2c_master_read((address << 1), (char *)rxBuffer, quantity, sendStop);

  if(read < 0)
  {
    ret_val = 0;
  }else
  {
    ret_val = read;
  }

  // set rx buffer iterator vars
  rxBufferIndex = 0;
  rxBufferLength = ret_val;

  enableInterrupt();

  return ret_val;
}

uint8_t TwoWire::requestFrom(uint8_t address, uint8_t quantity)
{
  return requestFrom((uint8_t)address, (uint8_t)quantity, (uint8_t)true);
}

uint8_t TwoWire::requestFrom(int address, int quantity)
{
  return requestFrom((uint8_t)address, (uint8_t)quantity, (uint8_t)true);
}

uint8_t TwoWire::requestFrom(int address, int quantity, int sendStop)
{
  return requestFrom((uint8_t)address, (uint8_t)quantity, (uint8_t)sendStop);
}

uint8_t TwoWire::endTransmission(uint8_t sendStop)
{
  // transmit buffer (blocking)
  disableInterrupt();

  int8_t ret = i2c_master_write((txAddress << 1), (const char *)txBuffer, txBufferLength, sendStop);
  // reset tx buffer iterator vars
  txBufferIndex = 0;
  txBufferLength = 0;
  // indicate that we are done transmitting
  transmitting = 0;

  enableInterrupt();

  return ret;
}

uint8_t TwoWire::endTransmission(void)
{
  return endTransmission(true);
}

int TwoWire::available(void)
{
  return rxBufferLength - rxBufferIndex;
}

int TwoWire::read(void)
{
  int value = -1;

  // get each successive byte on each call
  if(rxBufferIndex < rxBufferLength){
    value = rxBuffer[rxBufferIndex];
    ++rxBufferIndex;
  }

  return value;
}

int TwoWire::peek(void)
{
  int value = -1;

  if(rxBufferIndex < rxBufferLength){
    value = rxBuffer[rxBufferIndex];
  }

  return value;
}
